--- a/src/scss/actor/parts/effects.scss
+++ b/src/scss/actor/parts/effects.scss
@@ -4,19 +4,13 @@
   display: grid;
   grid-template-columns: 1fr 1fr;
   grid-column-gap: 1rem;
+
   .effects-list {
-    .items-list {
-      display: flex;
-      .item {
-        .item-name {
-          .effect-image {
-            width: 5px;
-            height: 5px;
-            border: none;
-            margin-right: 5px;
-          }
-        }
-      }
+    .item-effect-image {
+      width: 20px;
+      height: 20px;
+      border: none;
+      margin-right: 10px;
     }
   }
 }
