--- a/src/templates/actor/parts/effects/parts/effects-list.hbs
+++ b/src/templates/actor/parts/effects/parts/effects-list.hbs
@@ -20,7 +20,7 @@
         {{#each effects as |effect|}}
         <tr class='item effect' data-effect-id="{{effect.id}}">
             <td class="item-name effect-name">
-                <h4>{{effect.name}}</h4>
+                <img class="item-effect-image" src="{{effect.icon}}"/>{{effect.name}}
             </td>
             <td class="effect-controls">
                 <a class="effect-control" data-action="toggle"
