--- a/src/scss/items/technique/technique.scss
+++ b/src/scss/items/technique/technique.scss
@@ -5,7 +5,6 @@
 
   .first-column {
     width: 6.3rem;
-    height: 6.3rem;
   }
 
   .second-column {
@@ -26,12 +25,12 @@
       .technique-header {
         padding-right: 0.5rem;
         padding-left: 0.5rem;
-  
+
         width: 100%;
-  
+
         .first-row {
           width: 100%;
-  
+
           .name .input-container {
             width: 100%;
           }
@@ -39,14 +38,23 @@
         .second-row {
           width: 100%;
           display: flex;
-           justify-content: space-between;
+          justify-content: space-between;
+
+          .input-container {
+            width: 2rem;
+          }
+          .sustenance {
+            .input {
+              height: 1.5rem;
+            }
+          }
         }
       }
       .description {
         display: flex;
         justify-content: start;
         padding-top: 0.5rem;
-  
+
         .label {
           align-self: flex-start;
           padding-right: 0.5rem;
@@ -54,25 +62,25 @@
         }
         .editor {
           @include input;
-  
+
           font-weight: inherit;
-  
+
           height: 6rem;
           width: 100%;
-  
+
           margin-top: 0;
           border-radius: 0.5rem;
         }
       }
       .technique-footer {
         width: 100%;
-  
+
         padding-right: 0.5rem;
-         padding-left: 0.5rem;
-  
+        padding-left: 0.5rem;
+
         display: flex;
         justify-content: space-between;
-  
+
         .input-container {
           width: 2rem;
         }
