--- a/src/templates/common/ui/horizontal-titled-input.hbs
+++ b/src/templates/common/ui/horizontal-titled-input.hbs
@@ -1,4 +1,4 @@
-<div class='{{this.class}} common-titled-input'>
+<div class='{{this.class}} common-titled-input' data-combat={{this.combatVisibility}}>
   {{#unless this.hideTitle}}
     <p
       class='label
