update-flags-visible-macro-combat-initial-data

--- a/src/templates/actor/parts/mystic/parts/spells/spells.hbs
+++ b/src/templates/actor/parts/mystic/parts/spells/spells.hbs
@@ -128,7 +128,7 @@
               'systems/animabf/templates/common/ui/custom-select-choices.hbs'
                 class="critic"
                 disabled=true
-                choices=xRoot.config.iterables.mystic.criticTypesWithNone
+                choices=xRoot.config.iterables.combat.weapon.criticTypesWithNone
                 inputName=(concat "system.dynamic.spells." spell._id ".system.critic.value")
                 inputValue=spell.system.critic.value
               }}
