update-ABFPsychicRoll-psychicShield-pyschicFatigue

--- a/src/templates/dialog/combat/combat-attack/parts/psychic.hbs
+++ b/src/templates/dialog/combat/combat-attack/parts/psychic.hbs
@@ -46,10 +46,10 @@
 
 {{>
 "systems/animabf/templates/common/ui/horizontal-titled-input.hbs"
-  title=(localize "macros.combat.dialog.psychic.damage.title")
+  title=(localize "macros.combat.dialog.psychic.damageModifier.title")
   disabled=this.attackSent
-  inputName="attacker.psychic.damage"
-  inputValue=this.attacker.psychic.damage
+  inputName="attacker.psychic.damageModifier"
+  inputValue=this.attacker.psychic.damageModifier
 }}
 
 {{#if (is 'eq' this.attacker.psychic.distance.enable false)}}
