--- a/src/templates/actor/parts/combat/combat.hbs
+++ b/src/templates/actor/parts/combat/combat.hbs
@@ -8,6 +8,7 @@
       {{> "systems/animabf/templates/actor/parts/combat/parts/armors.hbs"}}
     </div>
     <div class='third-row'>
+      {{> "systems/animabf/templates/actor/parts/combat/parts/supernatural-shields.hbs"}}
       {{> "systems/animabf/templates/actor/parts/combat/parts/combat-special-skills.hbs"}}
       {{> "systems/animabf/templates/actor/parts/combat/parts/combat-tables.hbs"}}
     </div>
