--- a/src/scss/actor/parts/combat.scss
+++ b/src/scss/actor/parts/combat.scss
@@ -14,6 +14,29 @@
     grid-column-gap: 1rem;
   }
 
+  // Supernatural Shields
+  .supernatural-shields {
+    .supernatural-shield-row:first-child {
+      margin-top: 0;
+    }
+
+    .supernatural-shield-row {
+      margin-top: 0.75rem;
+
+      display: grid;
+      grid-template-columns: 3fr 1fr 1fr;
+      grid-column-gap: 0.1rem;
+
+      .name .input-container {
+        width: 100%;
+      }
+      .origin .input-container {
+        width: 100%;
+      }
+    }
+  }
+  // Supernatural Shields
+
   .combat-special-skills {
     margin-top: 0.5rem;
 
