--- a/src/scss/animabf.scss
+++ b/src/scss/animabf.scss
@@ -15,3 +15,4 @@
 @import 'dialog/combat-defense-dialog';
 @import 'dialog/generic-dialog.scss';
 @import 'dialog/confirmation-prompt-dialog';
+@import 'dialog/new-supernatural-shield';
