--- a/src/templates/dialog/new-supernatural-shield/parts/new-mystic-shield.hbs
+++ b/src/templates/dialog/new-supernatural-shield/parts/new-mystic-shield.hbs
@@ -1,11 +1,8 @@
-<form>
-  <div class='form-group'>
-    <div>
     {{#> 'systems/animabf/templates/common/ui/custom-select.hbs'
       title=(localize 'dialogs.spell.title')
       inputName='new.mysticShield.id'
     }}
-      {{#each_when data.actor.system.mystic.spells "system" "spellType" "value" "defense"}}
+      {{#each_when this.data.actor.system.mystic.spells "system" "spellType" "value" "defense"}}
         <option {{#if (is "eq" this._id ../data.mystic.spellUsed)}}selected{{/if}} value='{{this._id}}'>{{this.name}}</option>
       {{/each_when}}
     {{/'systems/animabf/templates/common/ui/custom-select.hbs'}}
@@ -14,10 +11,10 @@
       title=(localize 'dialogs.spellGrade.title')
       inputName='new.mysticShield.grade'
     }}
-      <option {{#if (is "eq" data.mystic.spellGrade 'base')}}selected{{/if}} value='base'>{{localize 'dialogs.spellGrade.base.title'}}</option>
-      <option {{#if (is "eq" data.mystic.spellGrade 'intermediate')}}selected{{/if}} value='intermediate'>{{localize 'dialogs.spellGrade.intermediate.title'}}</option>
-      <option {{#if (is "eq" data.mystic.spellGrade 'advanced')}}selected{{/if}} value='advanced'>{{localize 'dialogs.spellGrade.advanced.title'}}</option>
-      <option {{#if (is "eq" data.mystic.spellGrade 'arcane')}}selected{{/if}} value='arcane'>{{localize 'dialogs.spellGrade.arcane.title'}}</option>
+      <option {{#if (is "eq" this.data.mystic.spellGrade 'base')}}selected{{/if}} value='base'>{{localize 'dialogs.spellGrade.base.title'}}</option>
+      <option {{#if (is "eq" this.data.mystic.spellGrade 'intermediate')}}selected{{/if}} value='intermediate'>{{localize 'dialogs.spellGrade.intermediate.title'}}</option>
+      <option {{#if (is "eq" this.data.mystic.spellGrade 'advanced')}}selected{{/if}} value='advanced'>{{localize 'dialogs.spellGrade.advanced.title'}}</option>
+      <option {{#if (is "eq" this.data.mystic.spellGrade 'arcane')}}selected{{/if}} value='arcane'>{{localize 'dialogs.spellGrade.arcane.title'}}</option>
     {{/'systems/animabf/templates/common/ui/custom-select.hbs'}}
 
     {{#> 'systems/animabf/templates/common/ui/custom-select.hbs'
@@ -27,8 +24,5 @@
       <option value='accumulated'>{{localize 'dialogs.castSpell.accumulated.title'}}</option>
       <option value='prepared'>{{localize 'dialogs.castSpell.prepared.title'}}</option>
       <option value='innate'>{{localize 'dialogs.castSpell.innate.title'}}</option>
-      <option {{#if (is "eq" data.mystic.castOverride true)}}selected{{/if}} value='override'>{{localize 'dialogs.castSpell.override.title'}}</option>
+      <option {{#if (is "eq" this.data.mystic.castOverride true)}}selected{{/if}} value='override'>{{localize 'dialogs.castSpell.override.title'}}</option>
     {{/'systems/animabf/templates/common/ui/custom-select.hbs'}}
-    </div>
-  </div>
-</form>
