--- a/src/templates/dialog/combat/combat-attack/parts/combat.hbs
+++ b/src/templates/dialog/combat/combat-attack/parts/combat.hbs
@@ -94,8 +94,8 @@
       "systems/animabf/templates/common/ui/horizontal-titled-input.hbs"
       title=(localize 'macros.combat.dialog.highGround.title')
       inputType="checkbox"
-      inputName="attacker.combat.highGround"
-      inputValue=(is 'eq' this.attacker.combat.highGround true)
+      inputName="attacker.highGround"
+      inputValue=(is 'eq' this.attacker.highGround true)
     }}
   </div>
 </div>
