--- a/src/templates/actor/parts/general/parts/presence.hbs
+++ b/src/templates/actor/parts/general/parts/presence.hbs
@@ -12,8 +12,8 @@
     "systems/animabf/templates/common/ui/horizontal-titled-input.hbs"
       class="presence"
       title=(localize "anima.ui.general.presence.title")
-      inputName="system.general.presence.base.value"
-      inputValue=system.general.presence.base.value
+      inputName="system.general.presence.value"
+      inputValue=system.general.presence.value
       rollable=true
       rollableDice='1d100'
     }}
