--- a/src/templates/actor/parts/header/parts/total-armor.hbs
+++ b/src/templates/actor/parts/header/parts/total-armor.hbs
@@ -72,7 +72,7 @@
     {{>
       "systems/animabf/templates/common/ui/vertical-titled-input.hbs"
         class="cold"
-        disabled=true
+        disabled=false
         title=(localize "anima.ui.combat.armors.at.cold.title")
         inputName="system.combat.totalArmor.at.cold.special.value"
         inputValue=system.combat.totalArmor.at.cold.special.value
