--- a/src/templates/actor/parts/settings/parts/tabVisibility.hbs
+++ b/src/templates/actor/parts/settings/parts/tabVisibility.hbs
@@ -32,5 +32,13 @@
       inputName="system.ui.tabVisibility.psychic.value"
       inputValue=system.ui.tabVisibility.psychic.value
     }}
+    {{>
+    "systems/animabf/templates/common/ui/horizontal-titled-input.hbs"
+      class="effects"
+      title=(localize "anima.ui.settings.tabVisibility.effects.title")
+      inputType="checkbox"
+      inputName="system.ui.tabVisibility.effects.value"
+      inputValue=system.ui.tabVisibility.effects.value
+    }}
   {{/"systems/animabf/templates/common/ui/group-body.hbs"}}
 {{/"systems/animabf/templates/common/ui/group.hbs"}}
